# BetterFlipper-CS2-Inventory-Manager

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: fetch-protos.ps1  fetch-protos.sh  strip-comments.py
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/proto/: README.md
src-tauri/src/: commands.rs  error.rs  events.rs  lib.rs  main.rs  persona.rs  secrets.rs  state.rs
src-tauri/src/inventory/: cache.rs  item.rs  market_image.rs  mod.rs  parser.rs  patterns.rs  resolver.rs
src-tauri/src/steam/: auth.rs  gc.rs  gc_msg.rs  mod.rs  session.rs
src-tauri/src/storage/: mod.rs
src/lib/: api.ts  format.ts  types.ts
src/lib/components/: Dropdown.svelte  InventoryFilters.svelte  ItemCard.svelte  ItemGrid.svelte  LoginForm.svelte  Sidebar.svelte  StoragePanel.svelte  TetrisLoader.svelte  TitleBar.svelte
src/lib/stores/: auth.ts  inventory.ts  storage.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/inventory/: +page.svelte
src/routes/storage/: +page.svelte
