[package]
name = "cs2-inventory-manager"
version = "1.0.0"
edition = "2021"
rust-version = "1.83"
license = "MIT"
description = "Open-source CS2 inventory & storage unit manager."

[lib]
name = "cs2_im_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cs2-inventory-manager"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-os = "2"
tauri-plugin-opener = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Steam client (pure Rust). Since steam-vent 0.5 the CS2 GC protobufs live
# in a separate crate — pull them in directly so we get every pre-generated
# message type for the casket / inventory workflow.
steam-vent = "0.5"
steam-vent-proto = "0.5"
steam-vent-proto-csgo = "0.5"
steam-vent-proto-common = "0.5"

# Byte buffers for raw GC payloads
bytes = "1"

# 2FA (Steam Guard TOTP)
totp-rs = { version = "5", features = ["steam"] }

# OS-level secret storage (Windows Credential Manager / libsecret / Keychain)
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }

# HTTP for ByMykel/CSGO-API metadata + images
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "gzip"] }

# Cross-platform user data dirs
directories = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors
thiserror = "1"
anyhow = "1"

# Time / dates
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
